RegressionTests/TestSuiteExport/accept/function_declarations.blade
// EXPECT: pass

fn square(x: u32) -> u32 {
    return x * x;
}

leaf fn fast(val: u32) -> u32 {
    return val;
}

inline fn nop() void {
}

rec fn fib(n: u32) -> u32 {
    return n;
}

coro fn prod() void {
    loop {
        yieldto prod();
    }
}

int1 fn on_timer() void {
    yield;
}

cog task main() {
    var squared: u32 = square(4);
    var fast_value: u32 = fast(squared);
    nop();
    var fib_value: u32 = fib(fast_value);
}