RegressionTests/TestSuiteExport/reject/local_storage_class.blade
// EXPECT: fail
// DIAGNOSTICS: E0215

fn f() void {
    cog var x: u32 = 0;
}